--- a/html/package.json
+++ b/html/package.json
@@ -9,9 +9,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "element-ui": "^2.13.2",
-    "eslint": "^7.11.0",
-    "semantic-ui-vue": "^0.11.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -24,11 +21,9 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.9.2",
-    "sass-loader": "^7.3.1",
-    "vue-cli-plugin-element": "~1.0.1",
-    "webpack-cli": "^4.0.0"
+    "element-ui": "^2.13.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0"
   },
   "eslintConfig": {
     "root": true,
