--- a/html/package.json
+++ b/html/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "semantic-ui-vue": "^0.11.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -22,8 +23,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "element-ui": "^2.13.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint": "^7.11.0",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "jquery": "^3.5.1"
   },
   "eslintConfig": {
     "root": true,
