--- a/html/package.json
+++ b/html/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "scriptjs": "^2.5.9",
     "semantic-ui-vue": "^0.11.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -25,7 +26,11 @@
     "element-ui": "^2.13.2",
     "eslint": "^7.11.0",
     "eslint-plugin-vue": "^7.0.0-0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
+    "uuid": "^8.3.1"
   },
   "eslintConfig": {
     "root": true,
