--- a/html/package.json
+++ b/html/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-ui": "^2.4.5",
     "scriptjs": "^2.5.9",
     "semantic-ui-vue": "^0.11.0",
+    "vant": "^3.0.0-beta.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -19,18 +21,21 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "^4.5.7",
-    "@vue/cli-plugin-vuex": "^4.5.7",
+    "@vue/cli-plugin-vuex": "^4.5.8",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "element-ui": "^2.13.2",
+    "babel-plugin-import": "^1.13.1",
+    "element-ui": "^2.14.0",
     "eslint": "^7.11.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "vue-cli-plugin-element": "^1.0.1",
+    "webpack": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
