--- a/html/package.json
+++ b/html/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.1.5",
     "axios": "^0.21.0",
     "babel-plugin-prismjs": "^2.0.1",
     "core-js": "^3.6.5",
