--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,14 @@
 /venv/
 /zfjsite/settings.py
 /dist/
-!/html/.env.development
+/html/.env.development
+/blog/migrations/
+blog/__pycache__/
+blog/migrations/__pycache__/
+html/src/CompositionApi/
+html/src/static/
+html/static/aspnet_client/
+html/static/images/blogPicture/
+html/static/images/commentPicture/
+html/static/uploadTmp/
+zfjsite/__pycache__/
